--- a/src/components/ExpenseFilter/ExpenseFilter.css
+++ b/src/components/ExpenseFilter/ExpenseFilter.css
@@ -10,6 +10,15 @@
     justify-content: space-between;
     margin: 1rem 0;
   }
+  .expenses-clear-filter__control{
+    display: flex;
+    align-items: flex-end;
+  }
+
+  .expenses-clear-filter__control :hover {
+    cursor: pointer;
+    text-decoration: underline 2px;
+  }
 
   .expenses-filter label {
     font-weight: bold;
