--- a/src/components/Chart/ChartBar.css
+++ b/src/components/Chart/ChartBar.css
@@ -7,7 +7,7 @@
   
   .chart-bar__inner {
     height: 100%;
-    width: 100%;
+    width: 70%;
     border: 1px solid #313131;
     border-radius: 12px;
     background-color: #caacac;
@@ -25,6 +25,7 @@
   
   .chart-bar__label {
     font-weight: bold;
-    font-size: 0.5rem;
+    font-variant: all-petite-caps;
+    font-size: small;
     text-align: center;
   }
